--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:docker": "ng serve --host 0.0.0.0 --port 8080",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "start:docker": "ng serve --host 0.0.0.0 --port 8080"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
