--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "start:docker": "ng serve --host 0.0.0.0 --port 8080",
+    "start:docker": "ng serve --host 0.0.0.0 --port 8080 --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
