--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,4 @@ services:
       - ".:/usr/src/app"
     ports:
       - "8080:8080"
-#    command: bash -c "npm i && npm run heroku-postbuild && npm start"
-    command: bash -c "npm i && npm run start:docker"
+    command: bash -c "npm i && npm run heroku-postbuild && npm start"
